# blaze-pixel

./: .gitignore  CMakeLists.txt
include/: blaze_pixel.hpp
test/: CMakeLists.txt  Catch.cmake  CatchAddTests.cmake  pixel_to_vector_tests.cpp  vector_to_pixel_tests.cpp
